Encabezado completo, se agregaron nuevas img

--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
     <title>Gabriela Prieto</title>
 </head>
 <body>
-
+    <header id="encabezado">
+        <div id="redesSociales">
+            <div id="iconRedeS">
+                <a href="https://www.behance.net/gabrielapr7d3f" target="_blank"><div id="Beha" class="redesS"><img src="recursos/behance.svg" alt="behance"></div></a>
+                <a href="https://www.linkedin.com/in/gabriela-prieto-176772186/" target="_blank"><div id="Linke" class="redesS"><img src="recursos/linkedin-in.svg" alt="linkedin"></div></a>
+                <a href="https://www.instagram.com/prieto.gbr/?hl=es-la" target="_blank"><div id="Instg" class="redesS"><img src="recursos/instagram.svg" alt="instagram"></div></a>
+                <a href="https://www.facebook.com/mariagabriela99?epa=SEARCH_BOX" target="_blank"><div id="face" class="redesS"><img src="recursos/facebook-f.svg" alt="facebook"></div></a>
+                <a href="https://twitter.com/prga99" target="_blank"><div id="Tw" class="redesS"><img src="recursos/twitter.svg" alt="twitter"></div></a>
+                <div id="telf" class="redesS"><img src="recursos/phone.svg" alt="telefono"></div>
+                <div id="correo" class="redesS"><img src="recursos/envelope.svg" alt="correo"></div>
+            </div>
+        </div>
+        <div id="portada" class="portadaArriba">
+            <div id="imgMenu"></div>
+            <h1>Hola! Soy Gabriela Prieto</h1>
+            <p>disenadora grafica y asesora en marketing digital,
+                me dedico a ayudar a emprendedores para que puedan desarrollar
+                o potenciar su marca y darse a conocer en el mundo virtual.
+            </p>
+            <div id="botonTeCuento">¿Te cuento como?</div>
+        </div>
+    </header>
+    <section id="wave"></section>
 
 
     
