Se agregaron seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="recursos/fcon.png" type="image/x-icon">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="mq.css">
     <title>Gabriela Prieto</title>
 </head>
 <body>
@@ -31,9 +32,22 @@
         </div>
     </header>
     <section id="wave"></section>
+    <section id="sobreMi">
+        <div id="tituloPortafolio">Portafolio</div>
+        <div id="contenedorImgFotoP">
+            <div id="imgFotoP"></div>
+            <div id="contenedorBarraSuperior"></div>
+            <div id="contenedorBarraInferior"></div>
+        </div>
+        <div id="textoSobreMi"> 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                in voluptate velit esse cillum dolore</p>
+        </div>
+    </section>
 
-
-    
 <script src="main.js"></script>
 </body>
 </html>
