se agrego seccion portafolio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,37 @@
                 in voluptate velit esse cillum dolore</p>
         </div>
     </section>
-
+    <section id="Portafolio">
+        <div id="dise_1" class="dise extra"><div id="diseImg_1" class="diseImg extraImg"></div></div>
+        <div id="dise_2" class="dise extra"><div id="diseImg_2" class="diseImg extraImg"></div></div>
+        <div id="dise_3" class="dise extra"><div id="diseImg_3" class="diseImg extraImg"></div></div>
+        <div id="dise_4" class="dise extra"><div id="diseImg_4" class="diseImg extraImg"></div></div>
+        <div id="dise_5" class="dise extra"><div id="diseImg_5" class="diseImg extraImg"></div></div>
+        <div id="dise_6" class="dise extra"><div id="diseImg_6" class="diseImg extraImg"></div></div>
+        <div id="dise_7" class="dise extra"><div id="diseImg_7" class="diseImg extraImg"></div></div>
+        <div id="dise_8" class="dise extra"><div id="diseImg_8" class="diseImg extraImg"></div></div>
+        <div id="dise_9" class="dise extra"><div id="diseImg_9" class="diseImg extraImg"></div></div>
+</section>
+    <!-- <section id="Portafolio">
+        <div id="DiseImg_1" class="Dise">
+        </div>
+        <div id="DiseImg_2" class="Dise">
+        </div>
+        <div id="DiseImg_3" class="Dise">
+        </div>
+        <div id="DiseImg_4" class="Dise">
+        </div>
+        <div id="DiseImg_5" class="Dise">
+        </div>
+        <div id="DiseImg_6" class="Dise">
+        </div>
+        <div id="DiseImg_7" class="Dise">
+        </div>
+        <div id="DiseImg_8" class="Dise">
+        </div>
+        <div id="DiseImg_9" class="Dise">
+        </div>
+</section> -->
 <script src="main.js"></script>
 </body>
 </html>
