--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <title>Gabriela Prieto</title>
 </head>
 <body>
+    <div id="fondoOscuroGeneral"></div>
+    <!-- SECCION EMERGENTES -->
+    <div id="emergenteTelefono">
+        <div id="llamar"><a href="tel:541124714416"><p>Llamar...</p></a></div>
+        <div id="Whatsapp"><a href="https://wa.me/541124714416" target="_blank"><p>Enviar Whatsapp...</p></a></div>
+        <div id="texTelf">
+            <p id="NumTelefono">+541124714416</p>
+            <div id="imgEmergTelef" class="imgCopy"></div>
+        </div>
+    </div>
+    <div id="emergenteCorreo">
+        <div id="enviarCorreo"><a href="mailto:prieto.gbr@gmail.com"><p>Enviar Correo...</p></a></div>
+        <div id="textCorreo">
+            <p id="TextoCorreo">prieto.gbr@gmail.com</p>
+            <div id="imgEmergCorreo" class="imgCopy"></div>
+        </div>
+    </div>
+    <div id="confirmacionCopy">Copiado en el portapapeles</div>
+    <!-- FIN SECCION EMERGENTES -->
     <header id="encabezado">
         <div id="redesSociales">
             <div id="iconRedeS">
@@ -57,27 +76,21 @@
         <div id="dise_7" class="dise extra"><div id="diseImg_7" class="diseImg extraImg"></div></div>
         <div id="dise_8" class="dise extra"><div id="diseImg_8" class="diseImg extraImg"></div></div>
         <div id="dise_9" class="dise extra"><div id="diseImg_9" class="diseImg extraImg"></div></div>
-</section>
-    <!-- <section id="Portafolio">
-        <div id="DiseImg_1" class="Dise">
-        </div>
-        <div id="DiseImg_2" class="Dise">
-        </div>
-        <div id="DiseImg_3" class="Dise">
-        </div>
-        <div id="DiseImg_4" class="Dise">
-        </div>
-        <div id="DiseImg_5" class="Dise">
-        </div>
-        <div id="DiseImg_6" class="Dise">
-        </div>
-        <div id="DiseImg_7" class="Dise">
-        </div>
-        <div id="DiseImg_8" class="Dise">
-        </div>
-        <div id="DiseImg_9" class="Dise">
-        </div>
-</section> -->
+    </section>
+    <!-- SECCION DETALLES PROYECTOS -->
+    <div id="contenedorDetallePortafolio">
+        <div id="proyecto_1" class="proyectos"><img src="recursos/proyecto1.jpg" alt="proyecto"></div>
+        <div id="proyecto_2" class="proyectos"><img src="recursos/proyecto2.jpg" alt="proyecto"></div>
+        <div id="proyecto_3" class="proyectos"><img src="recursos/proyecto3.jpg" alt="proyecto"></div>
+        <div id="proyecto_4" class="proyectos"><img src="recursos/proyecto4.jpg" alt="proyecto"></div>
+        <div id="proyecto_5" class="proyectos"><img src="recursos/proyecto2.jpg" alt="proyecto"></div>
+        <div id="proyecto_6" class="proyectos"><img src="recursos/proyecto2.jpg" alt="proyecto"></div>
+        <div id="proyecto_7" class="proyectos"><img src="recursos/proyecto2.jpg" alt="proyecto"></div>
+        <div id="proyecto_8" class="proyectos"><img src="recursos/proyecto2.jpg" alt="proyecto"></div>
+        <div id="proyecto_9" class="proyectos"><img src="recursos/proyecto2.jpg" alt="proyecto"></div>
+        <div id="botonAtras"><img src="recursos/angle-left.svg" alt="atras"></div>
+        <div id="botonSiguiente"><img src="recursos/angle-right.svg" alt="siguiente"></div>
+    </div>
 <script src="main.js"></script>
 </body>
 </html>
