--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="es" manifest="manifest.appcache">
+<html lang="es">
 <head>
-    <title>Gabriela Prieto</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Luis Alejandro Borges">
@@ -24,6 +23,7 @@
     <link rel="preload" href="main.css" as="style">
     <link rel="stylesheet" href="main.css">
     <script src="main.js" defer></script>
+    <title>Gabriela Prieto</title>
 </head>
 <body style="visibility: hidden;">
     <div id="fondoOscuroGeneral"></div>
@@ -97,15 +97,15 @@
     </section>
     <!-- SECCION DETALLES PROYECTOS -->
     <div id="contenedorDetallePortafolio">
-        <div id="proyecto_1" class="proyectos"><img src="recursos/proyecto1.jpg" alt="proyecto"></div>
-        <div id="proyecto_2" class="proyectos"><img src="recursos/proyecto2.jpg" alt="proyecto"></div>
-        <div id="proyecto_3" class="proyectos"><img src="recursos/proyecto3.jpg" alt="proyecto"></div>
-        <div id="proyecto_4" class="proyectos"><img src="recursos/proyecto4.jpg" alt="proyecto"></div>
-        <div id="proyecto_5" class="proyectos"><img src="recursos/Dise5.jpg" alt="proyecto"><img src="recursos/proyecto5.jpg" alt="proyecto"></div>
-        <div id="proyecto_6" class="proyectos"><img src="recursos/Dise6.jpg" alt="proyecto"></div>
-        <div id="proyecto_7" class="proyectos"><img src="recursos/Dise7.jpg" alt="proyecto"><img src="recursos/proyecto7.jpg" alt="proyecto"></div>
-        <div id="proyecto_8" class="proyectos"><img src="recursos/Dise8.jpg" alt="proyecto"><img src="recursos/proyecto8_2.jpg" alt="proyecto"><img src="recursos/proyecto8_3.jpg" alt="proyecto"><img src="recursos/proyecto8_4.jpg" alt="proyecto"></div>
-        <div id="proyecto_9" class="proyectos"><img src="recursos/Dise9.jpg" alt="proyecto"></div>
+        <div id="proyecto_1" class="proyectos"><img loading="lazy" src="recursos/proyecto1.jpg" alt="proyecto"></div>
+        <div id="proyecto_2" class="proyectos"><img loading="lazy" src="recursos/proyecto2.jpg" alt="proyecto"></div>
+        <div id="proyecto_3" class="proyectos"><img loading="lazy" src="recursos/proyecto3.jpg" alt="proyecto"></div>
+        <div id="proyecto_4" class="proyectos"><img loading="lazy" src="recursos/proyecto4.jpg" alt="proyecto"></div>
+        <div id="proyecto_5" class="proyectos"><img loading="lazy" src="recursos/Dise5.jpg" alt="proyecto"><img loading="lazy" src="recursos/proyecto5.jpg" alt="proyecto"></div>
+        <div id="proyecto_6" class="proyectos"><img loading="lazy" src="recursos/Dise6.jpg" alt="proyecto"></div>
+        <div id="proyecto_7" class="proyectos"><img loading="lazy" src="recursos/Dise7.jpg" alt="proyecto"><img loading="lazy" src="recursos/proyecto7.jpg" alt="proyecto"></div>
+        <div id="proyecto_8" class="proyectos"><img loading="lazy" src="recursos/Dise8.jpg" alt="proyecto"><img loading="lazy" src="recursos/proyecto8_2.jpg" alt="proyecto"><img loading="lazy" src="recursos/proyecto8_3.jpg" alt="proyecto"><img loading="lazy" src="recursos/proyecto8_4.jpg" alt="proyecto"></div>
+        <div id="proyecto_9" class="proyectos"><img loading="lazy" src="recursos/Dise9.jpg" alt="proyecto"></div>
         <div id="contenedorFondoBotones"></div>
         <div id="botonAtras"><img src="recursos/angle-left.svg" alt="atras"></div>
         <div id="botonSiguiente"><img src="recursos/angle-right.svg" alt="siguiente"></div>
